2012-04-28  LRN  <l_r_nightmare@users.sf.net>

	Add missing <shobjidl.h> and associated UUID implementation.

	* include/shobjidl.h lib/shobjidl-uuid.c: New files.
	* lib/Makefile.in (UUID_SOURCES, UUID_OBJS): Add references.

2012-03-19  Ben Greear  <greear@users.sf.net>

	Adjust header file definition order, to fix issue [#1570].

	* include/routprot.h (IP_LOCAL_BINDING): Must be defined before...
	(IP_ADAPTER_BINDING_INFO): ...this; adjust order of definition.

2012-01-03  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	Add missing return value, flagged by 'make test'.

	* include/gdiplus/gdiplustypes.h (Gdiplus::GdiplusAbort::Abort):
	Return NO_ERROR in virtual definition.

2012-01-03  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	Remove duplicate definitions, identified by 'make test'.

	* include/wincrypt.h (CRYPT_NEWKEYSET, CRYPT_DELETEKEYSET)
	(CRYPT_MACHINE_KEYSET, CRYPT_EXPORTABLE, CRYPT_USER_PROTECTED)
	(CRYPT_SILENT, CRYPT_CREATE_SALT, CRYPT_UPDATE_KEY, CRYPT_NO_SALT)
	(CRYPT_PREGEN, CRYPT_RECIPIENT, CRYPT_INITIATOR, CRYPT_ONLINE)
	(CRYPT_SF, CRYPT_CREATE_IV, CRYPT_KEK, CRYPT_DATA_KEY)
	(CRYPT_VOLATILE, CRYPT_SGCKEY): Delete second instance of each.

	* include/winerror.h (CRYPT_E_REVOKED): Delete; it is already
	correctly defined (per MSDN) in <wincrypt.h>

2012-01-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct misuse of #ifdef, identified by 'make test'.

	* include/shlwapi.h (enum ASSOCSTR, enum ASSOCDATA): Fix typos;
	/#ifdef _WIN32_IE >= 0x0600/s/#ifdef/#if/

2011-12-22  Corinna Vinschen  <corinna@vinschen.de>

	Replace more incorrectly named manifest constants.

	* include/winnt.h (JOB_OBJECT_LIMIT_BREAKAWAY_OK)
	(JOB_OBJECT_LIMIT_SILENT_BREAKAWAY_OK): Define; make aliases for...
	(JOB_OBJECT_BREAKAWAY_OK, JOB_OBJECT_SILENT_BREAKAWAY): ...these old
	definitions respectively; retain for backward compatibility only.

2011-12-22  Corinna Vinschen  <corinna@vinschen.de>

	Add missing PROCESS_QUERY_LIMITED_INFORMATION.
