@@ -1,3 +1,12 @@
+2012-04-29  Jan Ringos  <tringi@users.sf.net>
+
+	Correct version guard for WinXP minimum requirement.
+
+	* include/winbase.h (GetModuleHandleEx): Function unsupported for...
+	[_WIN32_WINNT >= 0x500]: ...this; it isn't in Win2K, so should be...
+	[_WIN32_WINNT >= 0x501]: ...this; correct it accordingly.
+	(GetModuleHandleExA, GetModuleHandleExW): Likewise.
+
 2012-04-28  LRN  <l_r_nightmare@users.sf.net>
 
 	Add missing <shobjidl.h> and associated UUID implementation.
